force-app/main/default/objects/EventItem__c/EventItem__c.object-meta.xml
<CustomObject>
    <label>Event Item</label>
    <pluralLabel>Event Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>