force-app/main/default/objects/EventItem__c/fields/ActualDiscountedExtAlternatePrice__c.field-meta.xml
<CustomField>
    <fullName>ActualDiscountedExtAlternatePrice__c</fullName>
    <label>Actual Discounted Ext Alternate Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>