force-app/main/default/objects/EventItem__c/fields/ActualDiscountedExtPrice__c.field-meta.xml
<CustomField>
    <fullName>ActualDiscountedExtPrice__c</fullName>
    <label>Actual Discounted Ext Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>