force-app/main/default/objects/EventItem__c/fields/ActualDiscountedInclExtAlternatePrice__c.field-meta.xml
<CustomField>
    <fullName>ActualDiscountedInclExtAlternatePrice__c</fullName>
    <label>Actual Disc Incl Ext Alternate Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>