force-app/main/default/objects/EventItem__c/fields/ActualDiscountedInclusiveExtPrice__c.field-meta.xml
<CustomField>
    <fullName>ActualDiscountedInclusiveExtPrice__c</fullName>
    <label>zNI ActualDiscountedInclusiveExtPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>