force-app/main/default/objects/EventItem__c/fields/ActualEventQuantity__c.field-meta.xml
<CustomField>
    <fullName>ActualEventQuantity__c</fullName>
    <label>Actual Event Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>