force-app/main/default/objects/EventItem__c/fields/ActualExclusiveAdminCharge__c.field-meta.xml
<CustomField>
    <fullName>ActualExclusiveAdminCharge__c</fullName>
    <label>Actual Exclusive Admin Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>