force-app/main/default/objects/EventItem__c/fields/ActualExclusiveAlternateAdminCharge__c.field-meta.xml
<CustomField>
    <fullName>ActualExclusiveAlternateAdminCharge__c</fullName>
    <label>Actual Exclusive Alterate Admin Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>