force-app/main/default/objects/EventItem__c/fields/ActualExclusiveAlternateGratuity__c.field-meta.xml
<CustomField>
    <fullName>ActualExclusiveAlternateGratuity__c</fullName>
    <label>Actual Exclusive Alternate Gratuity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>