force-app/main/default/objects/EventItem__c/fields/ActualExclusiveGratuity__c.field-meta.xml
<CustomField>
    <fullName>ActualExclusiveGratuity__c</fullName>
    <label>Actual Exclusive Gratuity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>