force-app/main/default/objects/EventItem__c/fields/ActualExclusiveTaxes__c.field-meta.xml
<CustomField>
    <fullName>ActualExclusiveTaxes__c</fullName>
    <label>Actual Exclusive Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>