force-app/main/default/objects/EventItem__c/fields/ActualExtAlternatePrice__c.field-meta.xml
<CustomField>
    <fullName>ActualExtAlternatePrice__c</fullName>
    <label>Actual Ext Alternate Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>