force-app/main/default/objects/EventItem__c/fields/ActualExtPrice__c.field-meta.xml
<CustomField>
    <fullName>ActualExtPrice__c</fullName>
    <label>Actual Ext Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>