force-app/main/default/objects/EventItem__c/fields/ActualInclExtAlternatePrice__c.field-meta.xml
<CustomField>
    <fullName>ActualInclExtAlternatePrice__c</fullName>
    <label>Actual Inclusive Ext Alternate Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>