force-app/main/default/objects/EventItem__c/fields/ActualInclExtPrice__c.field-meta.xml
<CustomField>
    <fullName>ActualInclExtPrice__c</fullName>
    <label>Actual Inclusive Ext Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>