force-app/main/default/objects/EventItem__c/fields/ActualPackageQuantity__c.field-meta.xml
<CustomField>
    <fullName>ActualPackageQuantity__c</fullName>
    <label>Actual Package Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>