force-app/main/default/objects/EventItem__c/fields/ActualQuantity__c.field-meta.xml
<CustomField>
    <fullName>ActualQuantity__c</fullName>
    <label>Actual Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>