force-app/main/default/objects/EventItem__c/fields/ActualRevenue10__c.field-meta.xml
<CustomField>
    <fullName>ActualRevenue10__c</fullName>
    <label>ActualRevenue10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>