force-app/main/default/objects/EventItem__c/fields/ActualRevenue12__c.field-meta.xml
<CustomField>
    <fullName>ActualRevenue12__c</fullName>
    <label>ActualRevenue12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>