force-app/main/default/objects/EventItem__c/fields/AdminCharge__c.field-meta.xml
<CustomField>
    <fullName>AdminCharge__c</fullName>
    <label>Admin Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>