force-app/main/default/objects/EventItem__c/fields/AdminIsIncludedInInclusivePrice__c.field-meta.xml
<CustomField>
    <fullName>AdminIsIncludedInInclusivePrice__c</fullName>
    <label>Include Admin Charge in Inclusive Price</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>