force-app/main/default/objects/EventItem__c/fields/AllowDecimalQuantities__c.field-meta.xml
<CustomField>
    <fullName>AllowDecimalQuantities__c</fullName>
    <label>Allow Decimal Quantities</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>