force-app/main/default/objects/EventItem__c/fields/AlternateDescription__c.field-meta.xml
<CustomField>
    <fullName>AlternateDescription__c</fullName>
    <label>Alternate Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>