force-app/main/default/objects/EventItem__c/fields/AlternateServingUnit__c.field-meta.xml
<CustomField>
    <fullName>AlternateServingUnit__c</fullName>
    <label>Alternate Units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>