force-app/main/default/objects/EventItem__c/fields/AlternateSoldByUnit__c.field-meta.xml
<CustomField>
    <fullName>AlternateSoldByUnit__c</fullName>
    <label>Alternate Sold By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>