force-app/main/default/objects/EventItem__c/fields/AlternateUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>AlternateUnitPrice__c</fullName>
    <label>Alternate Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>