force-app/main/default/objects/EventItem__c/fields/ApplyChargesToDiscPrice__c.field-meta.xml
<CustomField>
    <fullName>ApplyChargesToDiscPrice__c</fullName>
    <label>Apply Admin &amp; Gratuity To Discount Price</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>