force-app/main/default/objects/EventItem__c/fields/BeoSectionSortOrder__c.field-meta.xml
<CustomField>
    <fullName>BeoSectionSortOrder__c</fullName>
    <label>BEO Section Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>