force-app/main/default/objects/EventItem__c/fields/BookedDiscountedExtPrice__c.field-meta.xml
<CustomField>
    <fullName>BookedDiscountedExtPrice__c</fullName>
    <label>Booked Discounted Ext Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>