force-app/main/default/objects/EventItem__c/fields/BookedEventQuantity__c.field-meta.xml
<CustomField>
    <fullName>BookedEventQuantity__c</fullName>
    <label>Booked Event Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>