force-app/main/default/objects/EventItem__c/fields/BookedExclusiveAdminCharge__c.field-meta.xml
<CustomField>
    <fullName>BookedExclusiveAdminCharge__c</fullName>
    <label>Booked Admin Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>