force-app/main/default/objects/EventItem__c/fields/BookedExclusiveGratuity__c.field-meta.xml
<CustomField>
    <fullName>BookedExclusiveGratuity__c</fullName>
    <label>Booked Gratuity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>