force-app/main/default/objects/EventItem__c/fields/BookedExclusiveTaxes__c.field-meta.xml
<CustomField>
    <fullName>BookedExclusiveTaxes__c</fullName>
    <label>Booked Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>