force-app/main/default/objects/EventItem__c/fields/BookedExtPrice__c.field-meta.xml
<CustomField>
    <fullName>BookedExtPrice__c</fullName>
    <label>Booked Ext Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>