force-app/main/default/objects/EventItem__c/fields/BookedPackageQuantity__c.field-meta.xml
<CustomField>
    <fullName>BookedPackageQuantity__c</fullName>
    <label>Booked Package Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>