force-app/main/default/objects/EventItem__c/fields/BookedQuantity__c.field-meta.xml
<CustomField>
    <fullName>BookedQuantity__c</fullName>
    <label>Booked Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>