force-app/main/default/objects/EventItem__c/fields/CalculatedUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>CalculatedUnitPrice__c</fullName>
    <label>Calculated Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>