force-app/main/default/objects/EventItem__c/fields/DoNotPrintOnBeo__c.field-meta.xml
<CustomField>
    <fullName>DoNotPrintOnBeo__c</fullName>
    <label>Do Not Print On BEO</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>