force-app/main/default/objects/EventItem__c/fields/DoNotPrintOnCheck__c.field-meta.xml
<CustomField>
    <fullName>DoNotPrintOnCheck__c</fullName>
    <label>Do Not Print On Check</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>