force-app/main/default/objects/EventItem__c/fields/EstimatedConsumptionPercentage__c.field-meta.xml
<CustomField>
    <fullName>EstimatedConsumptionPercentage__c</fullName>
    <label>Estimated Consumption Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>