force-app/main/default/objects/EventItem__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <referenceTo>BookingEvent__c</referenceTo>
    <relationshipName>Event_EventItem</relationshipName>
    <relationshipLabel>Event (EventItem)</relationshipLabel>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>