force-app/main/default/objects/EventItem__c/fields/Gratuity__c.field-meta.xml
<CustomField>
    <fullName>Gratuity__c</fullName>
    <label>Gratuity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>