force-app/main/default/objects/EventItem__c/fields/GratuityIsIncludedInInclusivePrice__c.field-meta.xml
<CustomField>
    <fullName>GratuityIsIncludedInInclusivePrice__c</fullName>
    <label>Include Gratuity in Inclusive Price</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>