force-app/main/default/objects/EventItem__c/fields/HidePriceOnBeo__c.field-meta.xml
<CustomField>
    <fullName>HidePriceOnBeo__c</fullName>
    <label>Hide Price On BEO</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>