force-app/main/default/objects/EventItem__c/fields/HideQuantityOnBeo__c.field-meta.xml
<CustomField>
    <fullName>HideQuantityOnBeo__c</fullName>
    <label>Hide Quantity On BEO</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>