force-app/main/default/objects/EventItem__c/fields/HideServeTimesOnBeo__c.field-meta.xml
<CustomField>
    <fullName>HideServeTimesOnBeo__c</fullName>
    <label>Hide Serve Times On BEO</label>
    <description>Please download the latest BEO templates to use this functionality.</description>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>