force-app/main/default/objects/EventItem__c/fields/InclusiveAlternateUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>InclusiveAlternateUnitPrice__c</fullName>
    <label>Inclusive Alternate Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>