force-app/main/default/objects/EventItem__c/fields/InclusiveUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>InclusiveUnitPrice__c</fullName>
    <label>zNI InclusiveUnitPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>