force-app/main/default/objects/EventItem__c/fields/IsIncludedInPackage__c.field-meta.xml
<CustomField>
    <fullName>IsIncludedInPackage__c</fullName>
    <label>IsIncludedInPackage</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>