force-app/main/default/objects/EventItem__c/fields/ItemTagsName__c.field-meta.xml
<CustomField>
    <fullName>ItemTagsName__c</fullName>
    <label>Item Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>