force-app/main/default/objects/EventItem__c/fields/ItemType__c.field-meta.xml
<CustomField>
    <fullName>ItemType__c</fullName>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Item</fullName>
            </value>
            <value>
                <fullName>Simple Menu</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Detailed Menu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>