force-app/main/default/objects/EventItem__c/fields/Menu__c.field-meta.xml
<CustomField>
    <fullName>Menu__c</fullName>
    <label>Menu</label>
    <referenceTo>EventItem__c</referenceTo>
    <relationshipName>Menu_EventItem</relationshipName>
    <relationshipLabel>Menu (EventItem)</relationshipLabel>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>