force-app/main/default/objects/EventItem__c/fields/NIHRMMigrations_OriginalQuantity__c.field-meta.xml
<CustomField>
    <fullName>NIHRMMigrations_OriginalQuantity__c</fullName>
    <label>Migrations OriginalQuantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>