force-app/main/default/objects/EventItem__c/fields/PriceWithMenu__c.field-meta.xml
<CustomField>
    <fullName>PriceWithMenu__c</fullName>
    <label>Price With Menu</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>