force-app/main/default/objects/EventItem__c/fields/QuantityCalculation__c.field-meta.xml
<CustomField>
    <fullName>QuantityCalculation__c</fullName>
    <label>Quantity Calculation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Calculated</fullName>
            </value>
            <value>
                <fullName>Per Person</fullName>
            </value>
            <value>
                <fullName>Per Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>