force-app/main/default/objects/EventItem__c/fields/RecalculateTaxes__c.field-meta.xml
<CustomField>
    <fullName>RecalculateTaxes__c</fullName>
    <label>Recalculate Taxes</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>