force-app/main/default/objects/EventItem__c/fields/RevenueBreakdownUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>RevenueBreakdownUnitPrice__c</fullName>
    <label>Revenue Breakdown Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>