force-app/main/default/objects/EventItem__c/fields/RevenueBreakdownUnitPriceTotal__c.field-meta.xml
<CustomField>
    <fullName>RevenueBreakdownUnitPriceTotal__c</fullName>
    <label>zNI DEPRECATED</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>