force-app/main/default/objects/EventItem__c/fields/RichDescription__c.field-meta.xml
<CustomField>
    <fullName>RichDescription__c</fullName>
    <label>Rich Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>