force-app/main/default/objects/EventItem__c/fields/SalesDiscount__c.field-meta.xml
<CustomField>
    <fullName>SalesDiscount__c</fullName>
    <label>Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>