force-app/main/default/objects/EventItem__c/fields/ServFactor__c.field-meta.xml
<CustomField>
    <fullName>ServFactor__c</fullName>
    <label>Service Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>