force-app/main/default/objects/EventItem__c/fields/ServiceEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>ServiceEndDateTime__c</fullName>
    <label>Serve End</label>
    <type>DateTime</type>
</CustomField>