force-app/main/default/objects/EventItem__c/fields/ServiceStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>ServiceStartDateTime__c</fullName>
    <label>Serve Start</label>
    <type>DateTime</type>
</CustomField>