force-app/main/default/objects/EventItem__c/fields/ServingUnit__c.field-meta.xml
<CustomField>
    <fullName>ServingUnit__c</fullName>
    <label>Units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>