force-app/main/default/objects/EventItem__c/fields/SoldByUnit__c.field-meta.xml
<CustomField>
    <fullName>SoldByUnit__c</fullName>
    <label>Sold By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>