force-app/main/default/objects/EventItem__c/fields/TotalBookedPackageCovers__c.field-meta.xml
<CustomField>
    <fullName>TotalBookedPackageCovers__c</fullName>
    <label>Total Booked Package Covers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>