force-app/main/default/objects/EventItem__c/fields/TotalPackageCovers__c.field-meta.xml
<CustomField>
    <fullName>TotalPackageCovers__c</fullName>
    <label>Total Package Covers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>